# print3

./: .gitignore  CMakeLists.txt  Makefile  README.md  fetch-dependencies.bat  fetch-dependencies.sh  fetch-raylib.sh
examples/: box.off  stdin.txt
src/: args.c  args.h  dsa.h  main.c  scene.c  scene.h  viewer.c  viewer.h
src/deserialize/: file.c  file.h  memory.h  obj.c  obj.h  off.c  off.h  parsing.c  parsing.h  ply.c  ply.h  stdin.c  stdin.h  stl.c  stl.h  util.c  util.h
